--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
+  "dependencies": {
+    "react": "^16.13.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
@@ -36,6 +39,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
