--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "module": "commonjs",
+    "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
@@ -16,9 +16,8 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true
+    "noUnusedParameters": true
   },
-  "include": ["src/**/*", "@types"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
